# gradescope-assignment-download

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
gradescope/: __init__.py  api.py  config_default.yaml  macros.py  raw_util.py  util.py  version.py
src/gradescope_export/: __init__.py
