[project]
name = "gradescope-assignment-download"
version = "1.0"
description = "Download gradescope assignments as pdfs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pywsse>=0.1.5.2",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
    "six>=1.16.0",
    "confuse>=2.0.1",
    "bs4>=0.0.2",
    "enum34>=1.1.10",
    "fpdf2>=2.7.9",
]
